<resources>
    <string name="app_name">TODO_13</string>
    <string name="donut">Donuts are glazed and sprinkled with candy</string>
    <string name="sandwich">Ice cream sandwiches have chocolate waffles and vanilla filling</string>
    <string name="froyo">Froyo is premium self-serve frozen yogurt</string>
    <string name="order">You have ordered a donut</string>
    <string name="order2">You have ordered an Ice cream sandwich</string>
    <string name="order3">You have ordered a Froyo</string>
    <string name="same_day_msg">Same day messenger service</string>
    <string name="next_day_msg">Next day ground delivery</string>
    <string name="pick_up_msg">Pick up</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="address">Address</string>
    <string name="enter_address">Enter address</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter phone</string>
    <string name="note">Note</string>
    <string name="enter_note">Enter note</string>
    <string name="choose_a_delivery_method">Choose a delivery method:</string>
    <string name="droid_desserts">Droid Desserts</string>
    <string name="todo">TODO</string>
    <string name="order_menu">Order</string>
    <string name="status_menu">Status</string>
    <string name="favourite_menu">Favourite</string>
    <string name="contact_menu">Contact</string>
    <string name="fav_item_toast">Selected favourite</string>
    <string name="status_item_toast">Selected status</string>
    <string name="contact_item_toast">Clicked contact</string>
    <string name="shop_item">Shop</string>
    <string name="info_menu">Info</string>
    <string name="shop_item_toast">Selected Shop</string>
    <string name="info_item_toast">Selected info</string>

    <string-array name="phoneType">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>



</resources>