<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/ordered_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textSize="18sp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/ordered_message"/>

    <EditText
        android:id="@+id/name_edittxt"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:ems="10"
        android:textSize="18sp"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:layout_below="@+id/ordered_message"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/name"/>

    <EditText
        android:id="@+id/address_edittxt"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:ems="10"
        android:hint="@string/enter_address"
        android:inputType="textMultiLine"
        android:layout_below="@+id/name_edittxt"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/address"/>

    <EditText
        android:id="@+id/phone_edittxt"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:ems="10"
        android:hint="@string/enter_phone"
        android:inputType="phone"
        android:layout_below="@+id/address_edittxt"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_edittxt"
        android:padding="15dp"
        android:textSize="18sp"
        android:layout_marginLeft="-85dp"
        android:layout_marginTop="23dp"
        android:layout_toRightOf="@+id/address_edittxt" />

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textSize="15sp"
        android:padding="15dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/phone"/>


    <EditText
        android:id="@+id/note_edittxt"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:textSize="18sp"
        android:ems="10"
        android:hint="@string/enter_note"
        android:inputType="textCapSentences"
        android:layout_below="@+id/phone_edittxt"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/order_choice_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_delivery_method"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textSize="18sp"
        android:padding="15dp"
        android:layout_marginTop="24dp"
        android:layout_below="@+id/note"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/order_choice_msg"
        android:orientation="vertical"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp">

        <RadioButton
            android:id="@+id/same_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/same_day_msg"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/next_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_day_msg"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/pickup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_up_msg"
            android:onClick="onRadioButtonClicked"/>

    </RadioGroup>


</RelativeLayout>